SAK-50600 Golbal JDK 17 upgrade
https://sakaiproject.atlassian.net/browse/SAK-50600