@@ -103,7 +103,7 @@
     <sakai.msgcntr.version>${sakai.version}</sakai.msgcntr.version> 
     <!-- Set the source encoding to avoid maven warnings -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <sakai.jdk.version>11</sakai.jdk.version>
+    <sakai.jdk.version>17</sakai.jdk.version>
     <sakai.build.directory>target</sakai.build.directory>
     <maven.test.redirectTestOutputToFile>false</maven.test.redirectTestOutputToFile>
     <!-- Default empty unless profile activation -->
@@ -348,9 +348,27 @@
         <scope>provided</scope>
       </dependency>
       <dependency>
+        <groupId>xml-apis</groupId>
+        <artifactId>xml-apis</artifactId>
+        <version>2.0.2</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
         <version>2.12.2</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>xalan</groupId>
+        <artifactId>xalan</artifactId>
+        <version>2.7.3</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>xalan</groupId>
+        <artifactId>serializer</artifactId>
+        <version>2.7.3</version>
         <scope>provided</scope>
       </dependency>
 
@@ -383,14 +401,6 @@
         <groupId>javax</groupId>
         <artifactId>javaee-api</artifactId>
         <version>8.0.1</version>
-        <scope>provided</scope>
-      </dependency>
-      <!-- parser API inconsistancies -->
-      <!-- force this version where used -->
-      <dependency>
-        <groupId>xerces</groupId>
-        <artifactId>xmlParserAPIs</artifactId>
-        <version>2.6.2</version>
         <scope>provided</scope>
       </dependency>
       <!-- shared/lib -->
@@ -2575,8 +2585,6 @@
             <additionalOptions>
               <additionalOption>--add-modules</additionalOption>
               <additionalOption>java.xml</additionalOption>
-              <additionalOption>--add-exports=java.xml/com.sun.org.apache.xml.internal.serializer=ALL-UNNAMED</additionalOption>
-              <additionalOption>--add-exports=java.xml/com.sun.org.apache.xml.internal.utils=ALL-UNNAMED</additionalOption>
             </additionalOptions>
             <additionalDependencies>
               <!-- these wicket dependencies can be removed once this version of wicket is no longer needed (delegatedaccess) -->
@@ -2872,7 +2880,6 @@
                     <exclude>commons-configuration:commons-configuration</exclude>
                     <exclude>commons-logging:commons-logging</exclude>
                     <exclude>log4j:log4j</exclude>
-                    <exclude>xalan:xalan</exclude>
                     <exclude>javax.mail:mail</exclude>
                   </excludes>
                 </bannedDependencies>
@@ -2900,8 +2907,29 @@
           <target>${sakai.jdk.version}</target>
           <forceJavacCompilerUse>true</forceJavacCompilerUse>
           <compilerArgs>
-            <arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.serializer=ALL-UNNAMED</arg>
-            <arg>--add-exports=java.xml/com.sun.org.apache.xml.internal.utils=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.io=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.math=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.nio=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.text=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.time=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.management/sun.management=ALL-UNNAMED</arg>
+            <arg>--add-opens=java.sql/java.sql=ALL-UNNAMED</arg>
+            <arg>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
+            <arg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</arg>
           </compilerArgs>
         </configuration>
       </plugin>
@@ -2937,7 +2965,38 @@
           <!-- This is to stop it stealing focus on developer machines (OSX) -->
           <!-- file.encoding is for windows which was failing tests under maven without this -->
           <!-- The random source it to stop builds stalling on VMs with poor sources of random -->
-          <argLine>--illegal-access=permit --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED -Djava.awt.headless=true -Dfile.encoding=${project.build.sourceEncoding} ${random-source}</argLine>
+          <argLine>
+            --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
+            --add-opens=java.xml/jdk.xml.internal=ALL-UNNAMED
+            --add-opens=java.base/java.io=ALL-UNNAMED
+            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+            --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+            --add-opens=java.base/java.lang=ALL-UNNAMED
+            --add-opens=java.base/java.math=ALL-UNNAMED
+            --add-opens=java.base/java.net=ALL-UNNAMED
+            --add-opens=java.base/java.nio=ALL-UNNAMED
+            --add-opens=java.base/java.text=ALL-UNNAMED
+            --add-opens=java.base/java.time=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+            --add-opens=java.base/java.util=ALL-UNNAMED
+            --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
+            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+            --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+            --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+            --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+            --add-opens=java.management/sun.management=ALL-UNNAMED
+            --add-opens=java.sql/java.sql=ALL-UNNAMED
+            --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+            --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+            --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+            -Dfile.encoding=${project.build.sourceEncoding}
+            -Djava.awt.headless=true
+            ${random-source}
+          </argLine>
         </configuration>
       </plugin>
       <plugin>
